k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buttprint-ingress-fe
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - buttprint.eu
      secretName: buttprint-tls
  rules:
    - host: buttprint.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: buttprint-fe
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buttprint-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # Rate limiting
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
    nginx.ingress.kubernetes.io/limit-req-status-code: "429"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.buttprint.eu
      secretName: buttprint-tls
  rules:
    - host: api.buttprint.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: buttprint-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: dagster-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Dagster"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dagster.buttprint.eu
      secretName: buttprint-tls
  rules:
    - host: dagster.buttprint.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster-webserver
                port:
                  number: 3000
